--- a/sonarqube-metrics/src/main/resources/application.properties
+++ b/sonarqube-metrics/src/main/resources/application.properties
@@ -20,8 +20,8 @@ service_bus.queue=ctrmdevmailqueue
 service_bus.DLQ=deadLetterQueue
 
 jms.username=RootManageSharedAccessKey
-jms.password=LgeA7+Nb0aVkwsYm+G3fU7DMsBa3ArduMOIim30GBS8=
-jms.remoteUri=amqps://ctrmdev.servicebus.windows.net?amqp.idleTimeout=120000
+jms.password=dfdfdfdfdfdfdfdf
+jms.remoteUri=amqps://xxxxxx.servicebus.windows.net?amqp.idleTimeout=120000
 server.port=8098
 #jms.username=admin
 #jms.password=admin
