--- a/sonarqube-metrics/src/main/resources/application.properties
+++ b/sonarqube-metrics/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #service_bus.queue=ctrmdevqueue
 #service_bus.DLQ=
 
-service_bus.queue=ctrmdevmailqueue
+service_bus.queue=mailqueue
 service_bus.DLQ=deadLetterQueue
 
 jms.username=RootManageSharedAccessKey
